Update wiremocks